--- a/index.html
+++ b/index.html
@@ -49,6 +49,49 @@
         </div>
     </section>
 
+    <section id="skill-sec">
+        <div class="center">
+            <h1>Skills</h1><br>
+            <p>Here are some of the skills on which I have learnt.</p>
+        </div><br><br>
+
+            <div class="skill-container">
+                <div class="sub-cont">
+                    <div class="cont">
+                        <h2>Web Development</h2>
+                        <div class="skill-list">
+                            <span><img src="html.png" alt="html" class="lang-logo">HTML</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">CSS</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">JavaScript</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">BootStrap</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">React</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">PHP Basics</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">Flask Basics</span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="sub-cont">
+                    <div class="cont">
+                        <h2>Other Skills</h2>
+                        <div class="skill-list">
+                            <span><img src="html.png" alt="html" class="lang-logo">Python</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">Core Java</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">C Programming</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">MySQL</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">MongoDB</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">Dev Tools</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">C++</span>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+
+    </section>
+
+
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
