--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                     <div class="cont">
                         <h2>Web Development</h2>
                         <div class="skill-list">
-                            <span><img src="html.png" alt="html" class="lang-logo">HTML</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">CSS</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">JavaScript</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">BootStrap</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">React</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">PHP Basics</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">Flask Basics</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">&nbsp; HTML</span>
+                            <span><img src="css.png" alt="html" class="lang-logo">&nbsp; CSS</span>
+                            <span><img src="js.png" alt="html" class="lang-logo">&nbsp; JavaScript</span>
+                            <span><img src="bootstrap.png" alt="html" class="lang-logo">&nbsp; BootStrap</span>
+                            <span><img src="react1.png" alt="html" class="lang-logo">&nbsp; React</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">&nbsp; PHP Basics</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">&nbsp; Flask Basics</span>
                         </div>
                     </div>
                 </div>
@@ -76,13 +76,13 @@
                     <div class="cont">
                         <h2>Other Skills</h2>
                         <div class="skill-list">
-                            <span><img src="html.png" alt="html" class="lang-logo">Python</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">Core Java</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">C Programming</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">MySQL</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">MongoDB</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">Dev Tools</span>
-                            <span><img src="html.png" alt="html" class="lang-logo">C++</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">&nbsp; Python</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">&nbsp; Core Java</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">&nbsp; C Programming</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">&nbsp; MySQL</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">&nbsp; MongoDB</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">&nbsp; Github</span>
+                            <span><img src="html.png" alt="html" class="lang-logo">&nbsp; C++</span>
                         </div>
                     </div>
                 </div>
