--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="sec-2">
             <ul class="links">
                 <li><a href="#">About</a></li>
-                <li><a href="#">Skills</a></li>
+                <li><a href="#skill-sec">Skills</a></li>
                 <li><a href="#">Visionary</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Education</a></li>
@@ -64,7 +64,7 @@
                             <span><img src="css.png" alt="html" class="lang-logo">&nbsp; CSS</span>
                             <span><img src="js.png" alt="html" class="lang-logo">&nbsp; JavaScript</span>
                             <span><img src="bootstrap.png" alt="html" class="lang-logo">&nbsp; BootStrap</span>
-                            <span><img src="react1.png" alt="html" class="lang-logo">&nbsp; React</span>
+                            <span><img src="react.png" alt="html" class="lang-logo">&nbsp; React</span>
                             <span><img src="php.png" alt="html" class="lang-logo" style="width: 3rem;">&nbsp; PHP Basics</span>
                             <span><img src="flask.png" alt="html" class="lang-logo">&nbsp; Flask Basics</span>
                         </div>
@@ -79,7 +79,7 @@
                             <span><img src="python.png" alt="html" class="lang-logo">&nbsp; Python</span>
                             <span><img src="java.jpg" alt="html" class="lang-logo">&nbsp; Core Java</span>
                             <span><img src="C_Logo.png" alt="html" class="lang-logo">&nbsp; C Programming</span>
-                            <span><img src="mysql.png" alt="html" class="lang-logo" style="width: 2.5rem;">&nbsp; MySQL</span>
+                            <span><img src="mysql.png" alt="html" class="lang-logo" style="width: 2.5rem; height: 2.2rem;">&nbsp; MySQL</span>
                             <span><img src="mongodb.png" alt="html" class="lang-logo" style="width: 1.5rem;">&nbsp; MongoDB</span>
                             <span><img src="github.jpg" alt="html" class="lang-logo" style="width: 2.5rem;">&nbsp; Github</span>
                             <span><img src="C++.png" alt="html" class="lang-logo">&nbsp; C++</span>
