Alt value changed

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                         <h2>Web Development</h2>
                         <div class="skill-list">
                             <span><img src="html.png" alt="html" class="lang-logo">&nbsp; HTML</span>
-                            <span><img src="css.png" alt="html" class="lang-logo">&nbsp; CSS</span>
-                            <span><img src="js.png" alt="html" class="lang-logo">&nbsp; JavaScript</span>
-                            <span><img src="bootstrap.png" alt="html" class="lang-logo">&nbsp; BootStrap</span>
-                            <span><img src="react.png" alt="html" class="lang-logo">&nbsp; React</span>
-                            <span><img src="php.png" alt="html" class="lang-logo" style="width: 3rem;">&nbsp; PHP Basics</span>
-                            <span><img src="flask.png" alt="html" class="lang-logo">&nbsp; Flask Basics</span>
+                            <span><img src="css.png" alt="css" class="lang-logo">&nbsp; CSS</span>
+                            <span><img src="js.png" alt="JavaScript" class="lang-logo">&nbsp; JavaScript</span>
+                            <span><img src="bootstrap.png" alt="bootstrap" class="lang-logo">&nbsp; BootStrap</span>
+                            <span><img src="react.png" alt="react" class="lang-logo">&nbsp; React</span>
+                            <span><img src="php.png" alt="php" class="lang-logo" style="width: 3rem;">&nbsp; PHP Basics</span>
+                            <span><img src="flask.png" alt="flask" class="lang-logo">&nbsp; Flask Basics</span>
                         </div>
                     </div>
                 </div>
@@ -76,13 +76,13 @@
                     <div class="cont">
                         <h2>Other Skills</h2>
                         <div class="skill-list">
-                            <span><img src="python.png" alt="html" class="lang-logo">&nbsp; Python</span>
-                            <span><img src="java.jpg" alt="html" class="lang-logo">&nbsp; Core Java</span>
-                            <span><img src="C_Logo.png" alt="html" class="lang-logo">&nbsp; C Programming</span>
-                            <span><img src="mysql.png" alt="html" class="lang-logo" style="width: 2.5rem; height: 2.2rem;">&nbsp; MySQL</span>
-                            <span><img src="mongodb.png" alt="html" class="lang-logo" style="width: 1.5rem;">&nbsp; MongoDB</span>
-                            <span><img src="github.jpg" alt="html" class="lang-logo" style="width: 2.5rem;">&nbsp; Github</span>
-                            <span><img src="C++.png" alt="html" class="lang-logo">&nbsp; C++</span>
+                            <span><img src="python.png" alt="python" class="lang-logo">&nbsp; Python</span>
+                            <span><img src="java.jpg" alt="java" class="lang-logo">&nbsp; Core Java</span>
+                            <span><img src="C_Logo.png" alt="c" class="lang-logo">&nbsp; C Programming</span>
+                            <span><img src="mysql.png" alt="mySql" class="lang-logo" style="width: 2.5rem; height: 2.2rem;">&nbsp; MySQL</span>
+                            <span><img src="mongodb.png" alt="monogDb" class="lang-logo" style="width: 1.5rem;">&nbsp; MongoDB</span>
+                            <span><img src="github.jpg" alt="github" class="lang-logo" style="width: 2.5rem;">&nbsp; Github</span>
+                            <span><img src="C++.png" alt="c++" class="lang-logo">&nbsp; C++</span>
                         </div>
                     </div>
                 </div>
