--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vignesh Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <nav class="container-fluid nav-style">
         <div class="sec-1">
-            <img src="v-logo.jpg" alt="my logo" id="logo">
+            <img src="/images/v-logo.jpg" alt="my logo" id="logo">
             <div class="hamburger-box" onclick="toggleMenu()">
                 <div></div>
                 <div></div>
@@ -45,7 +45,7 @@
         </div>
 
         <div class="abt-s2">
-            <img src="Vignesh Photo.jpg" alt="my image" id="my-img">
+            <img src="/images/Vignesh Photo.jpg" alt="my image" id="my-img">
         </div>
     </section>
 
@@ -60,13 +60,13 @@
                     <div class="cont">
                         <h2>Web Development</h2>
                         <div class="skill-list">
-                            <span><img src="html.png" alt="html" class="lang-logo">&nbsp; HTML</span>
-                            <span><img src="css.png" alt="css" class="lang-logo">&nbsp; CSS</span>
-                            <span><img src="js.png" alt="JavaScript" class="lang-logo">&nbsp; JavaScript</span>
-                            <span><img src="bootstrap.png" alt="bootstrap" class="lang-logo">&nbsp; BootStrap</span>
-                            <span><img src="react.png" alt="react" class="lang-logo">&nbsp; React</span>
-                            <span><img src="php.png" alt="php" class="lang-logo" style="width: 3rem;">&nbsp; PHP Basics</span>
-                            <span><img src="flask.png" alt="flask" class="lang-logo">&nbsp; Flask Basics</span>
+                            <span><img src="/images/html.png" alt="html" class="lang-logo">&nbsp; HTML</span>
+                            <span><img src="/images/css.png" alt="css" class="lang-logo">&nbsp; CSS</span>
+                            <span><img src="/images/js.png" alt="JavaScript" class="lang-logo">&nbsp; JavaScript</span>
+                            <span><img src="/images/bootstrap.png" alt="bootstrap" class="lang-logo">&nbsp; BootStrap</span>
+                            <span><img src="/images/react.png" alt="react" class="lang-logo">&nbsp; React</span>
+                            <span><img src="/images/php.png" alt="php" class="lang-logo" style="width: 3rem;">&nbsp; PHP Basics</span>
+                            <span><img src="/images/flask.png" alt="flask" class="lang-logo">&nbsp; Flask Basics</span>
                         </div>
                     </div>
                 </div>
@@ -76,13 +76,13 @@
                     <div class="cont">
                         <h2>Other Skills</h2>
                         <div class="skill-list">
-                            <span><img src="python.png" alt="python" class="lang-logo">&nbsp; Python</span>
-                            <span><img src="java.jpg" alt="java" class="lang-logo">&nbsp; Core Java</span>
-                            <span><img src="C_Logo.png" alt="c" class="lang-logo">&nbsp; C Programming</span>
-                            <span><img src="mysql.png" alt="mySql" class="lang-logo" style="width: 2.5rem; height: 2.2rem;">&nbsp; MySQL</span>
-                            <span><img src="mongodb.png" alt="monogDb" class="lang-logo" style="width: 1.5rem;">&nbsp; MongoDB</span>
-                            <span><img src="github.jpg" alt="github" class="lang-logo" style="width: 2.5rem;">&nbsp; Github</span>
-                            <span><img src="C++.png" alt="c++" class="lang-logo">&nbsp; C++</span>
+                            <span><img src="/images/python.png" alt="python" class="lang-logo">&nbsp; Python</span>
+                            <span><img src="/images/java.jpg" alt="java" class="lang-logo">&nbsp; Core Java</span>
+                            <span><img src="/images/C_Logo.png" alt="c" class="lang-logo">&nbsp; C Programming</span>
+                            <span><img src="/images/mysql.png" alt="mySql" class="lang-logo" style="width: 2.5rem; height: 2.2rem;">&nbsp; MySQL</span>
+                            <span><img src="/images/mongodb.png" alt="monogDb" class="lang-logo" style="width: 1.5rem;">&nbsp; MongoDB</span>
+                            <span><img src="/images/github.jpg" alt="github" class="lang-logo" style="width: 2.5rem;">&nbsp; Github</span>
+                            <span><img src="/images/C++.png" alt="c++" class="lang-logo">&nbsp; C++</span>
                         </div>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
     </section>
 
 
-    <script src="script.js"></script>
+    <script src="/assets/scripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
