--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="skill-list">
                             <span><img src="images/html.png" alt="html" class="lang-logo">&nbsp; HTML</span>
                             <span><img src="images/css.png" alt="css" class="lang-logo">&nbsp; CSS</span>
-                            <span><img src="images/js.png" alt="JavaScript" class="lang-logo">&nbsp; JavaScript</span>
+                            <span><img src="images/js.png" alt="JavaScript" class="lang-logo" style="width: 2.5rem;">&nbsp; JavaScript</span>
                             <span><img src="images/bootstrap.png" alt="bootstrap" class="lang-logo">&nbsp; BootStrap</span>
                             <span><img src="images/react.png" alt="react" class="lang-logo">&nbsp; React</span>
                             <span><img src="images/php.png" alt="php" class="lang-logo" style="width: 3rem;">&nbsp; PHP Basics</span>
@@ -77,10 +77,10 @@
                         <h2>Other Skills</h2>
                         <div class="skill-list">
                             <span><img src="images/python.png" alt="python" class="lang-logo">&nbsp; Python</span>
-                            <span><img src="images/java.jpg" alt="java" class="lang-logo">&nbsp; Core Java</span>
+                            <span><img src="images/java.jpg" alt="java" class="lang-logo" style="width: 2rem;">&nbsp; Core Java</span>
                             <span><img src="images/C_Logo.png" alt="c" class="lang-logo">&nbsp; C Programming</span>
                             <span><img src="images/mysql.png" alt="mySql" class="lang-logo" style="width: 2.5rem; height: 2.2rem;">&nbsp; MySQL</span>
-                            <span><img src="images/mongodb.png" alt="monogDb" class="lang-logo" style="width: 1.5rem;">&nbsp; MongoDB</span>
+                            <span><img src="images/mongodb.png" alt="monogDb" class="lang-logo" style="width: 1.3rem;">&nbsp; MongoDB</span>
                             <span><img src="images/github.jpg" alt="github" class="lang-logo" style="width: 2.5rem;">&nbsp; Github</span>
                             <span><img src="images/C++.png" alt="c++" class="lang-logo">&nbsp; C++</span>
                         </div>
