--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="links">
                 <li><a href="#">About</a></li>
                 <li><a href="#skill-sec">Skills</a></li>
-                <li><a href="#">Visionary</a></li>
+                <li><a href="#vision">Visionary</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Education</a></li>
                 <li><a href="#">Fine Me</a></li>
@@ -89,6 +89,40 @@
                 
             </div>
 
+    </section>
+
+
+    <section id="vision">
+        <h1>Visionary</h1>
+            <div class="vision-cont">
+                <div class="vision-cont-in">
+                    <h2>Personalisation</h2>
+                    <h3>A glimpse of my individuality</h3>
+                </div>
+                <div class="vision-cont-in">
+                    <p>As a budding React virtuoso , I'm fervently dedicated to crafting web experiences 
+                    that transcend the ordinary, infusing every pixel with elegance and enchantment .
+                    My unwavering passion for unraveling intricate challenges fuels my odyssey in the
+                    realm of front-end wizardry . The prospect of harmonizing<span> with a dynamic ensemble , 
+                    while imbibing wisdom from industry sages , thrills me as I amplify my proficiencies
+                    in this ever-mutating domain.</span>
+                    </p>
+                </div>
+            </div>
+            
+            <div class="vision-cont">
+                <div class="vision-cont-in">
+                    <h2>Reason to hire me</h2>
+                    <h3>What Sets Me Apart.</h3>
+                </div>
+                <div class="vision-cont-in">
+                    <p>Aspiring React Frontend Developer passionate about crafting exceptional user experiences. 
+                    I bring fresh perspectives, boundless ambition, and unconventional thinking to every project. 
+                    My goal is to create digital magic through energetic, innovative work. Let's connect and embark
+                    on a journey to <span>bring unique, ambitious, and engaging experiences to life.</span>
+                    </p>
+                </div>
+            </div>
     </section>
 
 
