--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p>As a budding React virtuoso , I'm fervently dedicated to crafting web experiences 
                     that transcend the ordinary, infusing every pixel with elegance and enchantment .
                     My unwavering passion for unraveling intricate challenges fuels my odyssey in the
-                    realm of front-end wizardry . The prospect of harmonizing<span class="dots">....</span><span class="more"> with a dynamic ensemble , 
+                    realm of front-end wizardry . The prospect of harmonizing<span class="dots"> ...</span><span class="more"> with a dynamic ensemble , 
                     while imbibing wisdom from industry sages , thrills me as I amplify my proficiencies
                     in this ever-mutating domain.</span>
                     </p>
@@ -120,7 +120,7 @@
                     <p>Aspiring React Frontend Developer passionate about crafting exceptional user experiences. 
                     I bring fresh perspectives, boundless ambition, and unconventional thinking to every project. 
                     My goal is to create digital magic through energetic, innovative work. Let's connect and embark
-                    on a journey<span class="dots">....</span> <span class="more"> to bring unique, ambitious, and engaging experiences to life.</span>
+                    on a journey<span class="dots"> ...</span> <span class="more"> to bring unique, ambitious, and engaging experiences to life.</span>
                     </p>
                 </div>
             </div>
