--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <section id="vision">
         <h1>Visionary</h1>
-        <p>Launching My Career: A Fresh Perspective on Web Development</p>
+        <p id="vision-p">Launching My Career: A Fresh Perspective on Web Development</p>
             <div class="vision-cont">
                 <div class="vision-cont-in">
                     <h2>Personalisation</h2>
