--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#skill-sec">Skills</a></li>
                 <li><a href="#vision">Visionary</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#">Education</a></li>
                 <li><a href="#">Fine Me</a></li>
             </ul>
@@ -94,8 +94,8 @@
 
 
     <section id="vision">
-        <h1>Visionary</h1>
-        <p id="vision-p">Launching My Career: A Fresh Perspective on Web Development</p>
+        <h1 class="h1-style">Visionary</h1>
+        <p class="p-style">Launching My Career: A Fresh Perspective on Web Development</p>
             <div class="vision-cont">
                 <div class="vision-cont-in">
                     <h2>Personalisation</h2>
@@ -127,6 +127,19 @@
             </div>
     </section>
 
+    <section id="projects">
+        <h1 class="h1-style">Projects</h1>
+        <p class="p-style">Here are some of my projects.</p>
+        <div class="projects-main-container">
+            <div class="card">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, odit.
+            </div>
+            <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse error hic neque voluptatem est at quo illo rerum corporis ab.</div>
+            <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad magnam similique perspiciatis cumque quidem consequatur error assumenda vero impedit voluptate iure nulla omnis illum exercitationem, eligendi quo cum velit eos?</div>
+            <div class="card">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente laborum odio cum voluptatum error officia aperiam eos eaque distinctio numquam ut culpa amet rerum, accusamus harum magnam atque, et asperiores dicta. Autem eaque repellendus incidunt numquam itaque sapiente earum obcaecati?</div>
+            <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias omnis eius magnam perferendis ratione culpa labore dicta, officiis neque harum nostrum obcaecati corporis atque, alias corrupti eos quod quas dolorum! Dolor cum iusto a mollitia. Quia nesciunt hic totam neque! Accusantium expedita ullam unde in et odit corrupti vitae incidunt?</div>
+        </div>
+    </section>
 
     <script src="assets/scripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
