--- a/index.html
+++ b/index.html
@@ -132,12 +132,71 @@
         <p class="p-style">Here are some of my projects.</p>
         <div class="projects-main-container">
             <div class="card">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, odit.
+                <img src="images/Jazzle.jpg" alt="jazzle">
+                <div class="proj-lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                </div>
+                <p class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
+                <div class="proj-links">
+                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">view code</a>
+                    <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
+                </div>
             </div>
-            <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse error hic neque voluptatem est at quo illo rerum corporis ab.</div>
-            <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad magnam similique perspiciatis cumque quidem consequatur error assumenda vero impedit voluptate iure nulla omnis illum exercitationem, eligendi quo cum velit eos?</div>
-            <div class="card">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente laborum odio cum voluptatum error officia aperiam eos eaque distinctio numquam ut culpa amet rerum, accusamus harum magnam atque, et asperiores dicta. Autem eaque repellendus incidunt numquam itaque sapiente earum obcaecati?</div>
-            <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias omnis eius magnam perferendis ratione culpa labore dicta, officiis neque harum nostrum obcaecati corporis atque, alias corrupti eos quod quas dolorum! Dolor cum iusto a mollitia. Quia nesciunt hic totam neque! Accusantium expedita ullam unde in et odit corrupti vitae incidunt?</div>
+            <div class="card">
+                <img src="images/Jazzle.jpg" alt="jazzle">
+                <div class="proj-lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                </div>
+                <your class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
+                <div class="proj-links">
+                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">view code</a>
+                    <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="images/Jazzle.jpg" alt="jazzle">
+                <div class="proj-lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                </div>
+                <p class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
+                <div class="proj-links">
+                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">view code</a>
+                    <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="images/Jazzle.jpg" alt="jazzle">
+                <div class="proj-lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                </div>
+                <p class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
+                <div class="proj-links">
+                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">view code</a>
+                    <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="images/Jazzle.jpg" alt="jazzle">
+                <div class="proj-lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                </div>
+                <p class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
+                <div class="proj-links">
+                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">view code</a>
+                    <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
+                </div>
+            </div>
+            
         </div>
     </section>
 
