Education section added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#skill-sec">Skills</a></li>
                 <li><a href="#vision">Visionary</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#">Education</a></li>
+                <li><a href="#education">Education</a></li>
                 <li><a href="#">Fine Me</a></li>
             </ul>
         </div>
@@ -145,16 +145,16 @@
                 </div>
             </div>
             <div class="card">
-                <img src="images/Jazzle.jpg" alt="jazzle">
+                <img src="images/fetch-products.jpg" alt="fetch products">
                 <div class="proj-lang">
                     <span>HTML</span>
                     <span>CSS</span>
                     <span>JS</span>
                 </div>
-                <your class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
+                <your class="proj-desc">Fetched products data from external server using <span class="imp-desc">Fetch API.</span></p>
                 <div class="proj-links">
-                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">view code</a>
-                    <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
+                    <a href="https://github.com/VigneshG26/Fetching-Data-from-External-Server" target="_blank">view code</a>
+                    <a href="https://vigneshg26.github.io/Fetching-Data-from-External-Server/" target="_blank">View live</a>
                 </div>
             </div>
             <div class="card">
@@ -199,6 +199,93 @@
             
         </div>
     </section>
+
+    <section id="education">
+        <div class="edu-head">
+            <h1 class="h1-style">Education</h1>
+            <p class="p-style">My education has been a journey of self-discovery and growth. My educational details are as follows.</p>
+        </div>
+            <div class="edu-cont">
+                <div class="edu-cont-in">
+                    <h2>Mebot Robotics and IT</h2>
+                    <h3>Mastering Frontend along with React.js</h3>
+                    <span class="yr-grad">2023 | 4-star rating</span>
+                </div>
+                <div class="edu-cont-in">
+                    <p>With a comprehensive front-end development course under my belt,
+                        I've cultivated expertise in HTML, CSS, and JavaScript. This 
+                        educational journey has empowered me to craft visually captivating,
+                        responsive websites and dynamic web applications. Complementing<span class="dots"> ...</span>
+                        <span class="more"> this,I've refined my abilities through hands-on 
+                        projects using React.js, a powerful tool for contemporary web development.</span>
+                    </p>
+                </div>
+            </div>
+            
+            <div class="edu-cont">
+                <div class="edu-cont-in">
+                    <h2>DG Vaishnav College</h2>
+                    <h3>Master of Computer Application (MCA)</h3>
+                    <span class="yr-grad">2022-2024 | 83.3%</span>
+                </div>
+                <div class="edu-cont-in">
+                    <p>As an MCA graduate, I possess strong problem-solving and analytical skills. 
+                        Combining this foundation with my passion for technology, I'm venturing into 
+                        IT. My college experience has equipped me to tackle complex challenges and 
+                        implement innovative solutions, <span class="dots"> ...</span> <span class="more">
+                        applying efficiency and creativity in both realms, making me a versatile professional.</span>
+                    </p>
+                </div>
+            </div>
+
+            <div class="edu-cont">
+                <div class="edu-cont-in">
+                    <h2>Thiruthangal Nadar College</h2>
+                    <h3>Bachelor of Computer Application (BCA)</h3>
+                    <span class="yr-grad">2019-2022 | 82.5%</span>
+                </div>
+                <div class="edu-cont-in">
+                    <p> As a BCA graduate, I bring a solid grounding in computer applications and systems. 
+                        My passion for technology drives my entry into the IT industry. Throughout college, 
+                        I gained hands-on experience in coding, web design, and database management. 
+                        This background <span class="dots"> ...</span> <span class="more">enables me to craft efficient and creative solutions, merging 
+                        theoretical knowledge with practical implementation, making me an adaptable and 
+                        innovative professional.</span>
+                    </p>
+                </div>
+            </div>
+
+            <div class="edu-cont">
+                <div class="edu-cont-in">
+                    <h2>Sri Sayee Vivekanandha Vidyalaya Matric Hr.Sec School</h2>
+                    <h3>12th Std (HSC)</h3>
+                    <span class="yr-grad">2018-2019 | 64.16%</span>
+                </div>
+                <div class="edu-cont-in">
+                    <p>I've embraced a dynamic academic journey. My studies have fostered critical 
+                        thinking and a thirst for knowledge. Through my dedication and adaptability, 
+                        I've honed essential skills that transcend disciplines, preparing me for future 
+                        challenges and opportunities.
+                    </p>
+                </div>
+            </div>
+
+            <div class="edu-cont">
+                <div class="edu-cont-in">
+                    <h2>Sri Sayee Vivekanandha Vidyalaya Matric Hr.Sec School</h2>
+                    <h3>10th Std (SSLC)</h3>
+                    <span class="yr-grad">2016-2017 | 87.4%</span>
+                </div>
+                <div class="edu-cont-in">
+                    <p>I embarked on my educational journey with enthusiasm. This pivotal year instilled 
+                        a strong foundation in essential subjects and time management. It was a crucial 
+                        step toward my academic and personal development, preparing me for the road ahead.
+                    </p>
+                </div>
+            </div>
+
+    </section>
+
 
     <script src="assets/scripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
