--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="edu-cont">
                 <div class="edu-cont-in">
                     <h2>Sri Sayee Vivekanandha Vidyalaya Matric Hr.Sec School</h2>
-                    <h3>12th Std (HSC)</h3>
+                    <h3>12th Std (HSC) (CS - Maths)</h3>
                     <span class="yr-grad">2018-2019 | 64.16%</span>
                 </div>
                 <div class="edu-cont-in">
