--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="sec-2">
             <ul class="links">
                 <li><a href="#">About</a></li>
-                <li><a href="#skill-sec">Skills</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#vision">Visionary</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#education">Education</a></li>
@@ -50,11 +50,11 @@
         </div>
     </section>
 
-    <section id="skill-sec">
-        <div class="center">
-            <h1>Skills</h1><br>
-            <p>Here are some of the skills on which I have learnt.</p>
-        </div><br><br>
+    <section id="skills">
+        <div class="skill-head">
+            <h1 class="h1-style">Skills</h1>
+            <p class="p-style">Here are some of my skills on which I have learnt.</p>
+        </div>
 
             <div class="skill-container">
                 <div class="sub-cont">
@@ -94,8 +94,10 @@
 
 
     <section id="vision">
-        <h1 class="h1-style">Visionary</h1>
-        <p class="p-style">Launching My Career: A Fresh Perspective on Web Development</p>
+        <div class="vision-head">
+            <h1 class="h1-style">Visionary</h1>
+            <p class="p-style">Launching My Career: A Fresh Perspective on Web Development</p>
+        </div>
             <div class="vision-cont">
                 <div class="vision-cont-in">
                     <h2>Personalisation</h2>
@@ -128,8 +130,10 @@
     </section>
 
     <section id="projects">
-        <h1 class="h1-style">Projects</h1>
-        <p class="p-style">Here are some of my projects.</p>
+        <div class="proj-head">
+            <h1 class="h1-style">Projects</h1>
+            <p class="p-style">Here are some of my projects.</p>
+        </div>
         <div class="projects-main-container">
             <div class="card">
                 <img src="images/Jazzle.jpg" alt="jazzle">
