--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
                     <h3>A glimpse of my individuality</h3>
                 </div>
                 <div class="vision-cont-in">
-                    <p>As a budding React virtuoso , I'm fervently dedicated to crafting web experiences 
-                    that transcend the ordinary, infusing every pixel with elegance and enchantment .
-                    My unwavering passion for unraveling intricate challenges fuels my odyssey in the
-                    realm of front-end<span class="dots"> ...</span><span class="more">  wizardry . The prospect of harmonizing with a dynamic ensemble , 
-                    while imbibing wisdom from industry sages , thrills me as I amplify my proficiencies
-                    in this ever-mutating domain.</span>
+                    <p>As a budding web development virtuoso, I'm fervently dedicated to crafting digital 
+                        experiences that transcend the ordinary, infusing every pixel with elegance and enchantment. 
+                        My unwavering passion for unraveling intricate challenges fuels my odyssey in the realm 
+                        of<span class="dots"> ...</span> <span class="more"> front-end wizardry. The prospect of harmonizing with a dynamic ensemble, 
+                        while imbibing wisdom from industry sages, thrills me as I amplify my proficiencies 
+                        in this ever-mutating domain.</span>
                     </p>
                 </div>
             </div>
@@ -120,10 +120,11 @@
                     <h3>What Sets Me Apart.</h3>
                 </div>
                 <div class="vision-cont-in">
-                    <p>Aspiring React Frontend Developer passionate about crafting exceptional user experiences. 
-                    I bring fresh perspectives, boundless ambition, and unconventional thinking to every project. 
-                    My goal is to create digital magic through energetic, innovative work. Let's connect<span class="dots"> ...</span> <span class="more">  and embark
-                    on a journey to bring unique, ambitious, and engaging experiences to life.</span>
+                    <p>Aspiring React Frontend Developer passionate about crafting exceptional user 
+                        experiences. I bring fresh perspectives, boundless ambition, and unconventional 
+                        thinking to every project. My goal is to create digital magic through energetic, 
+                        innovative work. Let's<span class="dots"> ...</span> <span class="more">connect and 
+                        embark on a journey to bring unique, ambitious, and engaging experiences to life.</span>
                     </p>
                 </div>
             </div>
