--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#vision">Visionary</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="#">Fine Me</a></li>
+                <li><a href="#findme">Fine Me</a></li>
             </ul>
         </div>
         <div class="sec-3">
@@ -213,7 +213,7 @@
             <div class="edu-cont">
                 <div class="edu-cont-in">
                     <h2>Mebot Robotics and IT</h2>
-                    <h3>Mastering Frontend along with React.js</h3>
+                    <h3>Full Stack Web Development course</h3>
                     <span class="yr-grad">2023 | 4-star rating</span>
                 </div>
                 <div class="edu-cont-in">
@@ -291,6 +291,30 @@
 
     </section>
 
+    <footer id="findme">
+        <h3>You can also find me in</h3>
+
+        <ul class="footer-links">
+            <li><a href="tel:+9500000911"><img src="images/call.png" alt="call" class="footer-icons"></a></li>
+            <li><a href="mailto:vigneshganesan2k1@gmail.com"><img src="images/gmail.jpg" alt="gmail" class="footer-icons"></a></li>
+            <li><a href="https://www.linkedin.com/in/vignesh-ganesan-01615b296/"><img src="images/linkedIn.png" alt="linkedIn" class="footer-icons"></a></li>
+            <li><a href="https://www.instagram.com/_v.i.c.k.y_26_/?igsh=YTZjcTg4c3VpaTVn"><img src="images/instagram.jpg" alt="instagram" class="footer-icons"></a></li>
+            <li><a href="Wa.me/+919500000911"><img src="images/whatsapp.png" alt="whatsapp" class="footer-icons"></a></li>
+            <li><a href="https://github.com/VigneshG26"><img src="images/github.jpg" alt="whatsapp" class="footer-icons"></a></li>
+        </ul>
+
+        <ul class="footer-links">
+            <li><a href="#">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#vision">Visionary</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#findme">Fine Me</a></li>
+        </ul>
+
+        <p>Elevating the Digital Experience!</p>
+
+    </footer>
 
     <script src="assets/scripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
