footer syles modified

--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <h3>You can also find me in</h3>
 
         <ul class="footer-links">
-            <li><a href="tel:+9500000911"><img src="images/call.png" alt="call" class="footer-icons"></a></li>
-            <li><a href="mailto:vigneshganesan2k1@gmail.com"><img src="images/gmail.jpg" alt="gmail" class="footer-icons"></a></li>
-            <li><a href="https://www.linkedin.com/in/vignesh-ganesan-01615b296/"><img src="images/linkedIn.png" alt="linkedIn" class="footer-icons"></a></li>
-            <li><a href="https://www.instagram.com/_v.i.c.k.y_26_/?igsh=YTZjcTg4c3VpaTVn"><img src="images/instagram.jpg" alt="instagram" class="footer-icons"></a></li>
-            <li><a href="Wa.me/+919500000911"><img src="images/whatsapp.png" alt="whatsapp" class="footer-icons"></a></li>
-            <li><a href="https://github.com/VigneshG26"><img src="images/github.jpg" alt="whatsapp" class="footer-icons"></a></li>
+            <li><a href="tel:+9500000911" target="_blank"><img src="images/call.jpg" alt="call" class="footer-icons"></a></li>
+            <li><a href="mailto:vigneshganesan2k1@gmail.com" target="_blank"><img src="images/gmail.jpg" alt="gmail" class="footer-icons"></a></li>
+            <li><a href="https://www.linkedin.com/in/vignesh-ganesan-01615b296/" target="_blank"><img src="images/linkedIn.png" alt="linkedIn" class="footer-icons"></a></li>
+            <li><a href="https://www.instagram.com/_v.i.c.k.y_26_/?igsh=YTZjcTg4c3VpaTVn" target="_blank"><img src="images/instagram.jpg" alt="instagram" class="footer-icons"></a></li>
+            <li><a href="https://api.whatsapp.com/send/?phone=%2B919500000911&text&type=phone_number&app_absent=0" target="_blank"><img src="images/whatsapp.png" alt="whatsapp" class="footer-icons"></a></li>
+            <li><a href="https://github.com/VigneshG26" target="_blank"><img src="images/github.jpg" alt="github" class="footer-icons"></a></li>
         </ul>
 
         <ul class="footer-links">
