--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
             <h1 class="h1-style">Projects</h1>
             <p class="p-style">Here are some of my projects.</p>
         </div>
+
         <div class="projects-main-container">
             <div class="card">
                 <img src="images/Jazzle.jpg" alt="jazzle">
@@ -149,19 +150,36 @@
                     <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
                 </div>
             </div>
+
+            <div class="card">
+                <img src="images/Glow Organic.jpg" alt="Glow Organic">
+                <div class="proj-lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                </div>
+                <p class="proj-desc">Enhance your health! Purchase our organic products. <span class="imp-desc">Shop Now!</span></p>
+                <div class="proj-links">
+                    <a href="https://github.com/VigneshG26/Glow-Organic" target="_blank">view code</a>
+                    <a href="https://vigneshg26.github.io/Glow-Organic/" target="_blank">View live</a>
+                </div>
+            </div>
+
             <div class="card">
                 <img src="images/fetch-products.jpg" alt="fetch products">
                 <div class="proj-lang">
                     <span>HTML</span>
                     <span>CSS</span>
                     <span>JS</span>
+                    <span>API</span>
                 </div>
-                <your class="proj-desc">Fetched products data from external server using <span class="imp-desc">Fetch API.</span></p>
+                <your class="proj-desc">Fetched products data from external source using <span class="imp-desc">Fetch API.</span></p>
                 <div class="proj-links">
                     <a href="https://github.com/VigneshG26/Fetching-Data-from-External-Server" target="_blank">view code</a>
                     <a href="https://vigneshg26.github.io/Fetching-Data-from-External-Server/" target="_blank">View live</a>
                 </div>
             </div>
+            
             <div class="card">
                 <img src="images/Jazzle.jpg" alt="jazzle">
                 <div class="proj-lang">
@@ -175,19 +193,7 @@
                     <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="images/Jazzle.jpg" alt="jazzle">
-                <div class="proj-lang">
-                    <span>HTML</span>
-                    <span>CSS</span>
-                    <span>JS</span>
-                </div>
-                <p class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
-                <div class="proj-links">
-                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">view code</a>
-                    <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
-                </div>
-            </div>
+
             <div class="card">
                 <img src="images/Jazzle.jpg" alt="jazzle">
                 <div class="proj-lang">
