--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </div>
             
             <div class="card">
-                <img src="images/Jazzle.jpg" alt="jazzle">
+                <img src="images/blackpink.jpg" alt="blackpink">
                 <div class="proj-lang">
                     <span>HTML</span>
                     <span>CSS</span>
@@ -189,8 +189,8 @@
                 </div>
                 <p class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
                 <div class="proj-links">
-                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">view code</a>
-                    <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
+                    <a href="https://github.com/VigneshG26/Blackpink-Webpage" target="_blank">view code</a>
+                    <a href="https://vigneshg26.github.io/Blackpink-Webpage/" target="_blank">View live</a>
                 </div>
             </div>
 
