Krish Fashion project added

--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
 
         <div class="projects-main-container">
             <div class="card">
-                <img src="images/Jazzle.jpg" alt="jazzle">
+                <img src="images/KrishFashionn.jpg" alt="krish">
                 <div class="proj-lang">
                     <span>HTML</span>
                     <span>CSS</span>
                     <span>JS</span>
                 </div>
-                <p class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
+                <p class="proj-desc">krish Fashion, your premier shopping haven is here. <span class="imp-desc">Shop Now!</span></p>
                 <div class="proj-links">
-                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">view code</a>
-                    <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
+                    <a href="https://github.com/VigneshG26/KrishFashion" target="_blank">view code</a>
+                    <a href="https://vigneshg26.github.io/KrishFashion/" target="_blank">View live</a>
                 </div>
             </div>
 
@@ -179,7 +179,7 @@
                     <a href="https://vigneshg26.github.io/Fetching-Data-from-External-Server/" target="_blank">View live</a>
                 </div>
             </div>
-            
+
             <div class="card">
                 <img src="images/blackpink.jpg" alt="blackpink">
                 <div class="proj-lang">
@@ -187,7 +187,7 @@
                     <span>CSS</span>
                     <span>JS</span>
                 </div>
-                <p class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
+                <p class="proj-desc">Blackpink's world, Welcome to a fan's paradise. <span class="imp-desc">Explore Now!</span></p>
                 <div class="proj-links">
                     <a href="https://github.com/VigneshG26/Blackpink-Webpage" target="_blank">view code</a>
                     <a href="https://vigneshg26.github.io/Blackpink-Webpage/" target="_blank">View live</a>
