--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Collaborative and committed to quality, you thrive in dynamic teams. Eager to contribute creativity 
                 and bring innovative ideas to life.
             </p><br>
-            <a href="https://scarlet-adelina-64.tiiny.site/" target="_blank">Check Resume</a>
+            <a href="https://drive.google.com/file/d/1_keH0fPwOGoR4svFavegyAsBXeWwjR0s/view" target="_blank">Check Resume</a>
         </div>
 
         <div class="abt-s2">
@@ -146,7 +146,7 @@
                 </div>
                 <p class="proj-desc">krish Fashion, your premier shopping haven is here. <span class="imp-desc">Shop Now!</span></p>
                 <div class="proj-links">
-                    <a href="https://github.com/VigneshG26/KrishFashion" target="_blank">view code</a>
+                    <a href="https://github.com/VigneshG26/KrishFashion" target="_blank">View code</a>
                     <a href="https://vigneshg26.github.io/KrishFashion/" target="_blank">View live</a>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                 </div>
                 <p class="proj-desc">Enhance your health! Purchase our organic products. <span class="imp-desc">Shop Now!</span></p>
                 <div class="proj-links">
-                    <a href="https://github.com/VigneshG26/Glow-Organic" target="_blank">view code</a>
+                    <a href="https://github.com/VigneshG26/Glow-Organic" target="_blank">View code</a>
                     <a href="https://vigneshg26.github.io/Glow-Organic/" target="_blank">View live</a>
                 </div>
             </div>
@@ -175,7 +175,7 @@
                 </div>
                 <your class="proj-desc">Fetched products data from external source using <span class="imp-desc">Fetch API.</span></p>
                 <div class="proj-links">
-                    <a href="https://github.com/VigneshG26/Fetching-Data-from-External-Server" target="_blank">view code</a>
+                    <a href="https://github.com/VigneshG26/Fetching-Data-from-External-Server" target="_blank">View code</a>
                     <a href="https://vigneshg26.github.io/Fetching-Data-from-External-Server/" target="_blank">View live</a>
                 </div>
             </div>
@@ -189,7 +189,7 @@
                 </div>
                 <p class="proj-desc">Blackpink's world, Welcome to a fan's paradise. <span class="imp-desc">Explore Now!</span></p>
                 <div class="proj-links">
-                    <a href="https://github.com/VigneshG26/Blackpink-Webpage" target="_blank">view code</a>
+                    <a href="https://github.com/VigneshG26/Blackpink-Webpage" target="_blank">View code</a>
                     <a href="https://vigneshg26.github.io/Blackpink-Webpage/" target="_blank">View live</a>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                 </div>
                 <p class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
                 <div class="proj-links">
-                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">view code</a>
+                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">View code</a>
                     <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
                 </div>
             </div>
