--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <span><img src="images/bootstrap.png" alt="bootstrap" class="lang-logo">&nbsp; BootStrap</span>
                             <span><img src="images/react.png" alt="react" class="lang-logo">&nbsp; React</span>
                             <span><img src="images/php.png" alt="php" class="lang-logo" style="width: 3rem;">&nbsp; PHP Basics</span>
-                            <span><img src="images/flask.png" alt="flask" class="lang-logo">&nbsp; Flask Basics</span>
+                            <span><img src="images/flask.png" alt="flask" class="lang-logo">&nbsp; Flask</span>
                         </div>
                     </div>
                 </div>
@@ -203,8 +203,8 @@
                 </div>
                 <p class="proj-desc">Jazzle your one stop shopping is here. <span class="imp-desc">Shop Now!</span></p>
                 <div class="proj-links">
-                    <a href="https://github.com/VigneshG26/E-Commerce-Website" target="_blank">View code</a>
-                    <a href="https://vigneshg26.github.io/E-Commerce-Website/" target="_blank">View live</a>
+                    <a href="https://github.com/VigneshG26/Jazzle" target="_blank">View code</a>
+                    <a href="https://vigneshg26.github.io/Jazzle/" target="_blank">View live</a>
                 </div>
             </div>
             
