--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Vignesh G Portfolio">
+    <meta property="og:description" content="Explore my Projects, Skills, Qualification and many more!...">
+    <meta property="og:image" content="https://drive.google.com/file/d/1ASP-1QADbpdm_e8svjJTqQnwQqAbnxhL/view?usp=sharing">
+    <meta property="og:url" content="https://vigneshg26.github.io/Portfolio/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Vignesh G Portfolio">
     <title>Vignesh Portfolio</title>
     <link rel="stylesheet" href="assets/styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
