--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Vignesh G Portfolio">
     <meta property="og:description" content="Explore my Projects, Skills, Qualification and many more!...">
-    <meta property="og:image" content="https://drive.google.com/file/d/1ASP-1QADbpdm_e8svjJTqQnwQqAbnxhL/view?usp=sharing">
+    <meta property="og:image" content="https://drive.google.com/uc?id=1tIKJE0OQvI3WYktByEt158cjuVNM9myK">
     <meta property="og:url" content="https://vigneshg26.github.io/Portfolio/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Vignesh G Portfolio">
