--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#vision">Visionary</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="#findme">Fine Me</a></li>
+                <li><a href="#findme">Find Me</a></li>
             </ul>
         </div>
         <div class="sec-3">
@@ -321,7 +321,7 @@
             <li><a href="#vision">Visionary</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#findme">Fine Me</a></li>
+            <li><a href="#findme">Find Me</a></li>
         </ul>
 
         <p>Elevating the Digital Experience!</p>
